google map fixed

--- a/About.html
+++ b/About.html
@@ -32,7 +32,7 @@
                     <span class="toggler-icon bottom-bar"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav ms-auto" style="text-align: center">
                         <li class="nav-item active">
                             <a class="nav-link" href="index.html">
                                 HOME
@@ -52,20 +52,21 @@
                                href="#">
                                 SERVICE
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow" style="background-color: rgba(0,0,0,0.7)"
+                            <ul class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow"
+                                style="background-color: rgba(0,0,0,0.7); text-align: center"
                                 aria-labelledby="navbarDropdown">
                                 <li>
-                                    <a href="macRepair.html" class="dropdown-item rounded-2 py-1">
+                                    <a href="MacRepair.html" class="dropdown-item rounded-2 py-4">
                                         MAC REPAIR
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="accessoriesRepair.html" class="dropdown-item rounded-2 py-1">
+                                    <a href="AccessoriesRepair.html" class="dropdown-item rounded-2 py-4">
                                         ACCESSORIES REPAIR
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="iPhoneRepair.html" class="dropdown-item rounded-2 py-1">
+                                    <a href="iPhoneRepair.html" class="dropdown-item rounded-2 py-4">
                                         IPHONE REPAIR
                                     </a>
                                 </li>
