--- a/AccessoriesRepair.html
+++ b/AccessoriesRepair.html
@@ -105,19 +105,19 @@
                     </div>
                     <div class="carousel-inner object-fit-cover h-100">
                         <div class="carousel-item active object-fit-cover">
-                            <img src="images/iPhone14.jpeg" class="d-block w-100" alt="...">
+                            <img src="images/Apple_Watch_Ultra.jpeg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <button class="mb-4" type="button">Get a quote</button>
                             </div>
                         </div>
                         <div class="carousel-item object-fit-cover">
-                            <img src="images/iPhone13.webp" class="d-block w-100" alt="...">
+                            <img src="images/Apple%20Watch.jpeg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <button class="mb-4" type="button">Get a quote</button>
                             </div>
                         </div>
                         <div class="carousel-item object-fit-cover">
-                            <img src="images/iPhone12.jpeg" class="d-block w-100" alt="...">
+                            <img src="images/AirPods_Pro.webp" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <button class="mb-4" type="button">Get a quote</button>
                             </div>
@@ -140,72 +140,41 @@
                 <figure id="review1" class="testimonials col-md-3 mx-4">
                     <figcaption class="bg-light px-3 h-100">
                         <blockquote>
-                            <p id="review-1">"Absolutely thrilled with the service!
-                                My iPhone screen was shattered, and it's now as good as new.
-                                Quick, professional, and reasonably priced. Highly recommend!"
+                            <p id="review-1">"I rely on my Apple Watch daily for my training sessions.
+                                When the screen cracked, I was worried about the downtime.
+                                But these experts had it repaired faster than I expected! The watch looks and works like it's brand new.
+                                Outstanding service and a lifesaver for my fitness routine!"
                             </p><br><br>
                         </blockquote>
-                        <h3 id="name1">Emily Johnson</h3>
-                        <h4 id="title1">Marketing Manager</h4>
+                        <h3 id="name1">Oliver Thompson</h3>
+                        <h4 id="title1">Fitness Trainer</h4>
                     </figcaption>
                 </figure>
                 <figure id="review2" class="testimonials col-md-3 mx-4">
                     <figcaption class="bg-light px-3 h-100">
                         <blockquote>
-                            <p>"Impressive work on my iPhone battery replacement.
-                                Fast turnaround and great communication throughout.
-                                Definitely my go-to for any Apple repairs."
+                            <p>
+                                "As a music producer, I can't compromise on sound quality.
+                                When one of my AirPods Pro started malfunctioning, I was really concerned.
+                                The repair team here not only fixed the issue but also ensured the sound quality was top-notch.
+                                Quick, efficient, and absolutely reliable. They truly understand the importance of good sound!"
                             </p><br><br>
                         </blockquote>
-                        <h3>Michael Smith</h3>
-                        <h4>Software Engineer</h4>
+                        <h3>Ava Robinson</h3>
+                        <h4>Music Producer</h4>
                     </figcaption>
                 </figure>
                 <figure id="review3" class="testimonials col-md-3 mx-4">
                     <figcaption class="bg-light px-3 h-100">
                         <blockquote>
-                            <p>"My iPhone's camera lens was damaged, and these guys fixed it perfectly.
-                                The photos are crystal clear again. Great service, highly skilled technicians!"
+                            <p>
+                                "My Apple Pencil is my primary tool for digital art.
+                                When it stopped working properly, I was in the middle of a crucial project. These tech wizards repaired it quickly, ensuring I met my project deadline. The precision and responsiveness are as good as new.
+                                Extremely grateful for their speedy and expert service!"
                             </p><br><br>
                         </blockquote>
-                        <h3>Sarah Brown</h3>
-                        <h4>Freelance Photographer</h4>
-                    </figcaption>
-                </figure>
-                <figure id="review4" class="testimonials col-md-3 mx-4">
-                    <figcaption class="bg-light px-3 h-100">
-                        <blockquote>
-                            <p>"I was devastated when my iPhone wouldn't turn on.
-                                This team diagnosed the issue quickly and fixed it at an affordable price.
-                                Lifesavers!"
-                            </p><br><br>
-                        </blockquote>
-                        <h3>David Wilson</h3>
-                        <h4>High School Teacher</h4>
-                    </figcaption>
-                </figure>
-                <figure id="review5" class="testimonials col-md-3 mx-4">
-                    <figcaption class="bg-light px-3 h-100">
-                        <blockquote>
-                            <p>"As a designer, I rely heavily on my iPhone.
-                                When the screen went blank, I panicked.
-                                But these experts had it up and running in no time. Fantastic service!"
-                            </p><br><br>
-                        </blockquote>
-                        <h3>Jessica Davis</h3>
-                        <h4>Graphic Designer</h4>
-                    </figcaption>
-                </figure>
-                <figure id="review6" class="testimonials col-md-3 mx-4">
-                    <figcaption class="bg-light px-3 h-100">
-                        <blockquote>
-                            <p>"Dealt with water damage on my iPhone like pros.
-                                The phone is working flawlessly now.
-                                Efficient, professional, and friendly service."
-                            </p><br><br>
-                        </blockquote>
-                        <h3>James Miller</h3>
-                        <h4>Project Manager</h4>
+                        <h3>Ethan Martinez</h3>
+                        <h4>Digital Artist</h4>
                     </figcaption>
                 </figure>
             </div>
