--- a/MacRepair.html
+++ b/MacRepair.html
@@ -105,19 +105,19 @@
                     </div>
                     <div class="carousel-inner object-fit-cover h-100">
                         <div class="carousel-item active object-fit-cover">
-                            <img src="images/iPhone14.jpeg" class="d-block w-100" alt="...">
+                            <img src="images/mbp14.jpeg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <button class="mb-4" type="button">Get a quote</button>
                             </div>
                         </div>
                         <div class="carousel-item object-fit-cover">
-                            <img src="images/iPhone13.webp" class="d-block w-100" alt="...">
+                            <img src="images/mba13.jpeg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <button class="mb-4" type="button">Get a quote</button>
                             </div>
                         </div>
                         <div class="carousel-item object-fit-cover">
-                            <img src="images/iPhone12.jpeg" class="d-block w-100" alt="...">
+                            <img src="images/iMac.jpeg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <button class="mb-4" type="button">Get a quote</button>
                             </div>
@@ -140,79 +140,77 @@
                 <figure id="review1" class="testimonials col-md-3 mx-4">
                     <figcaption class="bg-light px-3 h-100">
                         <blockquote>
-                            <p id="review-1">"Absolutely thrilled with the service!
-                                My iPhone screen was shattered, and it's now as good as new.
-                                Quick, professional, and reasonably priced. Highly recommend!"
+                            <p id="review-1">
+                                "My MacBook Pro is my lifeline for video editing. When it started crashing, I was in a panic.
+                                The repair team here diagnosed the problem quickly and fixed it with amazing efficiency.
+                                The performance is now better than ever.
+                                Truly grateful for their expertise and swift service!"
                             </p><br><br>
                         </blockquote>
-                        <h3 id="name1">Emily Johnson</h3>
-                        <h4 id="title1">Marketing Manager</h4>
+                        <h3 id="name1">Sophia Perez</h3>
+                        <h4 id="title1">Video Editor</h4>
                     </figcaption>
                 </figure>
                 <figure id="review2" class="testimonials col-md-3 mx-4">
                     <figcaption class="bg-light px-3 h-100">
                         <blockquote>
-                            <p>"Impressive work on my iPhone battery replacement.
-                                Fast turnaround and great communication throughout.
-                                Definitely my go-to for any Apple repairs."
+                            <p>
+                                "As a travel blogger, my MacBook Air is essential for my work on the go.
+                                When the keyboard stopped functioning, I was stranded.
+                                These guys were fantastic – they repaired it quickly and even gave me helpful tips for maintenance.
+                                Superb service and very travel-friendly!"
                             </p><br><br>
                         </blockquote>
-                        <h3>Michael Smith</h3>
-                        <h4>Software Engineer</h4>
+                        <h3>Noah Johnson</h3>
+                        <h4>Travel Blogger</h4>
                     </figcaption>
                 </figure>
                 <figure id="review3" class="testimonials col-md-3 mx-4">
                     <figcaption class="bg-light px-3 h-100">
                         <blockquote>
-                            <p>"My iPhone's camera lens was damaged, and these guys fixed it perfectly.
-                                The photos are crystal clear again. Great service, highly skilled technicians!"
+                            <p>
+                                "My iMac is crucial for my graphic design work.
+                                When the display had issues, it was a major setback.
+                                This team's repair work was not only quick but also incredibly precise.
+                                The display is now crystal clear, and the colors are perfect.
+                                Excellent service, highly recommended!"
                             </p><br><br>
                         </blockquote>
-                        <h3>Sarah Brown</h3>
-                        <h4>Freelance Photographer</h4>
+                        <h3>Emma Gonzalez</h3>
+                        <h4>Graphic Designer</h4>
                     </figcaption>
                 </figure>
                 <figure id="review4" class="testimonials col-md-3 mx-4">
                     <figcaption class="bg-light px-3 h-100">
                         <blockquote>
-                            <p>"I was devastated when my iPhone wouldn't turn on.
-                                This team diagnosed the issue quickly and fixed it at an affordable price.
-                                Lifesavers!"
+                            <p>
+                                "The Touch Bar on my MacBook Pro is essential for my programming workflow.
+                                When it started malfunctioning, I was worried about delays in my work.
+                                These technicians were lifesavers, fixing it efficiently and professionally. Now it works flawlessly.
+                                Amazing service!"
                             </p><br><br>
                         </blockquote>
-                        <h3>David Wilson</h3>
-                        <h4>High School Teacher</h4>
+                        <h3>Software Developer</h3>
+                        <h4>Liam Rodriguez</h4>
                     </figcaption>
                 </figure>
                 <figure id="review5" class="testimonials col-md-3 mx-4">
                     <figcaption class="bg-light px-3 h-100">
                         <blockquote>
-                            <p>"As a designer, I rely heavily on my iPhone.
-                                When the screen went blank, I panicked.
-                                But these experts had it up and running in no time. Fantastic service!"
+                            <p>
+                                "I use an older model iMac for my teaching prep, and it suddenly wouldn’t boot up.
+                                I feared it was the end for it, but these experts brought it back to life!
+                                They handled my old iMac with care and expertise, and it's running smoothly now.
+                                Exceptional service for even older models!"
                             </p><br><br>
                         </blockquote>
-                        <h3>Jessica Davis</h3>
-                        <h4>Graphic Designer</h4>
-                    </figcaption>
-                </figure>
-                <figure id="review6" class="testimonials col-md-3 mx-4">
-                    <figcaption class="bg-light px-3 h-100">
-                        <blockquote>
-                            <p>"Dealt with water damage on my iPhone like pros.
-                                The phone is working flawlessly now.
-                                Efficient, professional, and friendly service."
-                            </p><br><br>
-                        </blockquote>
-                        <h3>James Miller</h3>
-                        <h4>Project Manager</h4>
+                        <h3>Isabella Smith</h3>
+                        <h4>School Teacher</h4>
                     </figcaption>
                 </figure>
             </div>
             <div id="pagination" class="d-flex justify-content-center pb-5"></div>
-
         </section>
-        
     </main>
 
     <!-- Footer -->
@@ -303,7 +301,6 @@
         setupPagination();
         showReviews(currentPage); // Show the first set of reviews
     });
-
 
 </script>
 </body>
