--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                     <span class="toggler-icon bottom-bar"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav ms-auto" style="text-align: center">
                         <li class="nav-item active">
                             <a class="nav-link" href="index.html">
                                 HOME
@@ -50,20 +50,21 @@
                                href="#">
                                 SERVICE
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow" style="background-color: rgba(0,0,0,0.7)"
+                            <ul class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow"
+                                style="background-color: rgba(0,0,0,0.7); text-align: center"
                                 aria-labelledby="navbarDropdown">
                                 <li>
-                                    <a href="macRepair.html" class="dropdown-item rounded-2 py-1">
+                                    <a href="MacRepair.html" class="dropdown-item rounded-2 py-4">
                                         MAC REPAIR
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="accessoriesRepair.html" class="dropdown-item rounded-2 py-1">
+                                    <a href="AccessoriesRepair.html" class="dropdown-item rounded-2 py-4">
                                         ACCESSORIES REPAIR
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="iPhoneRepair.html" class="dropdown-item rounded-2 py-1">
+                                    <a href="iPhoneRepair.html" class="dropdown-item rounded-2 py-4">
                                         IPHONE REPAIR
                                     </a>
                                 </li>
@@ -96,7 +97,8 @@
                 <div id="map" class="w-100 h-100 rounded-2"></div>
             </div>
             <div class="col-6" style="height: 400px;">
-                <div id="text" class="w-100 h-100">
+                <div id="text" class="w-100 h-100 text-start"
+                     style="background-image: url(images/Store_photo.png); background-size: cover; text-shadow: 1px 1px 0 rgba(94,94,94,0.7); color: #ffffff">
                     <h2>Headquarters</h2>
                     <p>95 N 300 W, Salt Lake City, UT 84101</p><br>
                     <h2>Phone</h2>
