--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span class="toggler-icon bottom-bar"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav ms-auto" style="text-align: center">
                         <li class="nav-item active">
                             <a class="nav-link" href="index.html">
                                 HOME
@@ -53,20 +53,21 @@
                                href="#">
                                 SERVICE
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow" style="background-color: rgba(0,0,0,0.7)"
+                            <ul class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow"
+                                style="background-color: rgba(0,0,0,0.7); text-align: center"
                                 aria-labelledby="navbarDropdown">
                                 <li>
-                                    <a href="macRepair.html" class="dropdown-item rounded-2 py-1">
+                                    <a href="MacRepair.html" class="dropdown-item rounded-2 py-4">
                                         MAC REPAIR
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="accessoriesRepair.html" class="dropdown-item rounded-2 py-1">
+                                    <a href="AccessoriesRepair.html" class="dropdown-item rounded-2 py-4">
                                         ACCESSORIES REPAIR
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="iPhoneRepair.html" class="dropdown-item rounded-2 py-1">
+                                    <a href="iPhoneRepair.html" class="dropdown-item rounded-2 py-4">
                                         IPHONE REPAIR
                                     </a>
                                 </li>
@@ -104,7 +105,7 @@
                     Macbook Repair
                 </h2>
                 <a class="position-absolute"
-                   href="macRepair.html"
+                   href="MacRepair.html"
                    style="top: 80%">
                     <button type="button">
                         Learn more
@@ -125,7 +126,7 @@
                             Apple Watch Repair
                         </h2>
                         <a class="position-absolute"
-                           href="accessoriesRepair.html"
+                           href="AccessoriesRepair.html"
                            style="top: 85%; text-decoration: none; color: #c1ced9">
                             Learn more <i class="fa-solid fa-angle-right"></i>
                         </a>
@@ -137,7 +138,7 @@
                             Apple Pencil Repair
                         </h2>
                         <a class="position-absolute"
-                           href="accessoriesRepair.html"
+                           href="AccessoriesRepair.html"
                            style="top: 85%; text-decoration: none; color: #c1ced9">
                             Learn more <i class="fa-solid fa-angle-right"></i>
                         </a>
@@ -149,7 +150,7 @@
                             Airpods Repair
                         </h2>
                         <a class="position-absolute"
-                           href="accessoriesRepair.html"
+                           href="AccessoriesRepair.html"
                            style="top: 85%; text-decoration: none; color: #c1ced9;  text-shadow: none">
                             Learn more <i class="fa-solid fa-angle-right"></i>
                         </a>
@@ -161,7 +162,7 @@
                             iPad Repair
                         </h2>
                         <a class="position-absolute"
-                           href="accessoriesRepair.html"
+                           href="AccessoriesRepair.html"
                            style="top: 85%; text-decoration: none; color: #c1ced9; text-shadow: none">
                             Learn more <i class="fa-solid fa-angle-right"></i>
                         </a>
@@ -188,67 +189,6 @@
             </div>
         </section>
     </main>
-
-     <!-- Footer -->
-<!--    <footer class="py-5 px-5 bg-dark text-white">-->
-<!--        <div class="container">-->
-<!--            <div class="row">-->
-<!--                <div class="col-md-6">-->
-<!--                    <div class="copyright">-->
-<!--                        <p>&copy; 2023 CyberCore Technology, Inc. All rights reserved.</p>-->
-<!--                        <p id="datetime1"></p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-md-6">-->
-<!--                    <div class="d-flex justify-content-between">-->
-<!--                        <div class="social-media">-->
-<!--                            <p class="mb-4">Connect with us on social media:</p>-->
-<!--                            <div class="social-media-icons">-->
-<!--                                <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a>-->
-<!--                                <a href="https://twitter.com/?lang=en"><img src="images/logotipo-de-twitter.png" alt="Twitter"></a>-->
-<!--                                <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-
-<!--                        <div class="col-6 col-md-4 mb-3">-->
-<!--                            <form class="subscribe-form mt-3">-->
-<!--                                <h5>Subscribe to our newsletter</h5>-->
-<!--                                <p>Monthly digest of what's new and exciting from us.</p>-->
-<!--                                <div class="d-flex flex-column w-100 gap-2">-->
-<!--                                    <label for="newsletter1" class="visually-hidden">Email address</label>-->
-<!--                                    <input id="newsletter1" type="text" class="form-control" placeholder="Email address">-->
-<!--                                    <button class="btn btn-primary mt-2" type="button">Subscribe</button>-->
-<!--                                </div>-->
-<!--                            </form>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--            <div class="row mt-4">-->
-<!--                <div class="col-md-6">-->
-<!--                    <ul class="list-unstyled d-flex justify-content-end">-->
-<!--                        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>-->
-<!--                        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>-->
-<!--                        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>-->
-<!--                    </ul>-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--            <div class="row mt-4">-->
-<!--                <div class="col-md-6">-->
-<!--                    <h5>Quick links</h5>-->
-<!--                    <ul class="nav flex-column">-->
-<!--                        <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Home</a></li>-->
-<!--                        <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Features</a></li>-->
-<!--                        <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-white">Pricing</a></li>-->
-<!--                        <li class="nav-item mb-2"><a href="service.html" class="nav-link p-0 text-white">FAQs</a></li>-->
-<!--                        <li class="nav-item mb-2"><a href="About.html" class="nav-link p-0 text-white">About</a></li>-->
-<!--                    </ul>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </footer>-->
 
     <footer class="d-flex flex-wrap justify-content-between mx-0 align-items-center px-5 py-5"
             style="background-color: rgb(239,239,239)">
