--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         </div>
 
         <div class="col-md-4 d-flex align-center justify-content-center my-2">
-            <img class="col-md-4 d-flex align-items-center object-fit-contain" src="images/company_logo.png" style="height: 45px">
+            <img class="col-md-4 d-flex align-items-center object-fit-contain" src="images/company_logo.png" style="height: 45px" alt="">
         </div>
 
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex my-2">
