--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>HOME - cybercoretechnology.com</title>
     <link rel="icon" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="customize.css">
@@ -94,7 +94,7 @@
     <main>
         <section class="first-section bg-light pb-1" style="height: 100vh;">
             <div class="p-0 m-0 w-100 h-100 d-flex position-relative justify-content-center"
-                 style="object-fit: cover; background-image: url(images/Macbook_Repair.huge); height: 100vh; width: 100vh; background-size: cover; text-shadow: 1px 1px 2px rgba(0,0,0,0.5)">
+                 style="object-fit: cover; background-image: url(images/macbook.png); height: 100vh; width: 100vh; background-size: cover; text-shadow: 1px 1px 2px rgba(0,0,0,0.5)">
                 <h1 id="DiscountCode"
                     class="position-absolute text-white"
                     style="top:50%">
