--- a/MacRepair.html
+++ b/MacRepair.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--Pablo's Work-->
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mac Repair - cybercoretechnology.com</title>
+    <title>Mac Repair</title>
     <link rel="icon" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="customize2.css">
-    <link rel="stylesheet" href="customize3.css">
+    <link rel="stylesheet" href="CSS/customize2.css">
+    <link rel="stylesheet" href="CSS/customize3.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
 </head>
 
 <body class="d-flex h-100 text-white bg-dark" style="font: 12px '.AppleSystemUIFont'">
