--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--Rie's work-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - cybercoretechnology.com</title>
+    <title>Contact</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="customize.css">
+    <link rel="stylesheet" href="CSS/customize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
 </head>
 
 <body class="d-flex h-100 text-center text-dark bg-light" style="font: 12px '.AppleSystemUIFont'">
