--- a/About.html
+++ b/About.html
@@ -130,15 +130,7 @@
         </ul>
     </footer>
 
-<script>
-    // JavaScript Automated Date 
-    function updateDateTime() {
-        let currentDateTime = new Date();
-        document.getElementById('datetime').innerHTML = currentDateTime.toLocaleString();
-    }
-
-    setInterval(updateDateTime, 1000);
-</script>
+    <script src="index.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </div>
