--- a/MacRepair.html
+++ b/MacRepair.html
@@ -235,74 +235,9 @@
         </ul>
     </footer>
 
-    <script>
-        // JavaScript Automated Date
-        function updateDateTime() {
-            let currentDateTime = new Date();
-            document.getElementById('datetime').innerHTML = currentDateTime.toLocaleString();
-        }
-
-        setInterval(updateDateTime, 1000);
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </div>
-<script>
-    $(document).ready(function() {
-        const totalReviews = $('#review-slider .testimonials').length;
-        const reviewsPerPage = 3;
-        let currentPage = 1;
-
-        function showReviews(page) {
-            $('#review-slider .testimonials').hide();
-            for (let i = (page - 1) * reviewsPerPage; i < page * reviewsPerPage; i++) {
-                $('#review-slider .testimonials').eq(i).fadeIn();
-            }
-        }
-
-        function setupPagination() {
-            const pageCount = Math.ceil(totalReviews / reviewsPerPage);
-            updatePaginationButtons(pageCount, currentPage);
-        }
-
-        function updatePaginationButtons(pageCount, currentPage) {
-            $('#pagination').empty();
-            $('#pagination').append('<button class="rounded-2 page-btn" data-page="prev">Prev</button>');
-
-            let startPage = Math.max(currentPage - 2, 1);
-            let endPage = Math.min(currentPage + 2, pageCount);
-
-            if (currentPage <= 3) {
-                endPage = Math.min(5, pageCount);
-            }
-            if (currentPage > pageCount - 3) {
-                startPage = Math.max(1, pageCount - 4);
-            }
-
-            for (let i = startPage; i <= endPage; i++) {
-                $('#pagination').append(`<button class="rounded-2 page-btn ${i === currentPage ? 'active' : ''}" data-page="${i}">${i}</button>`);
-            }
-
-            $('#pagination').append('<button class="rounded-2 page-btn" data-page="next">Next</button>');
-        }
-
-        $(document).on('click', '.page-btn', function() {
-            const page = $(this).data('page');
-            if (page === "prev") {
-                currentPage = Math.max(1, currentPage - 1);
-            } else if (page === "next") {
-                currentPage = Math.min(Math.ceil(totalReviews / reviewsPerPage), currentPage + 1);
-            } else {
-                currentPage = parseInt(page);
-            }
-            showReviews(currentPage);
-            updatePaginationButtons(Math.ceil(totalReviews / reviewsPerPage), currentPage);
-        });
-
-        setupPagination();
-        showReviews(currentPage); // Show the first set of reviews
-    });
-
-</script>
+    <script src="index.js"></script>
 </body>
 
 </html>
