--- a/team.html
+++ b/team.html
@@ -16,172 +16,150 @@
 
 <body class="d-flex h-100 text-center text-black bg-light" style="font: 12px '.AppleSystemUIFont'">
 
-<div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
-  <header class="mb-auto">
-    <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(0,0,0,0.7);">
-      <div class="container opacity-100" id="navContainer">
-        <a class="navbar-brand text-light" style="font-size: 12px" href="index.html">
-          <img class="m-0 p-0" src="images/company_logo_light.png" alt="" style="height: 45px;">
-        </a>
-        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarCollapse"
-                aria-controls="#navbarCollapse"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
-          <span class="toggler-icon top-bar"></span>
-          <span class="toggler-icon middle-bar"></span>
-          <span class="toggler-icon bottom-bar"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav ms-auto" style="text-align: center">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">
-                HOME
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="team.html">
-                TEAM
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle"
-                 id="navbarDropdown"
-                 role="button"
-                 data-bs-toggle="dropdown"
-                 aria-expanded="false"
-                 href="#">
-                SERVICE
-              </a>
-              <ul class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow"
-                  style="background-color: rgba(0,0,0,0.7); text-align: center"
-                  aria-labelledby="navbarDropdown">
-                <li>
-                  <a href="MacRepair.html" class="dropdown-item rounded-2 py-4">
-                    MAC REPAIR
-                  </a>
-                </li>
-                <li>
-                  <a href="AccessoriesRepair.html" class="dropdown-item rounded-2 py-4">
-                    ACCESSORIES REPAIR
-                  </a>
-                </li>
-                <li>
-                  <a href="iPhoneRepair.html" class="dropdown-item rounded-2 py-4">
-                    IPHONE REPAIR
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">
-                CONTACT
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="About.html">
-                ABOUT US
-              </a>
-            </li>
+  <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
+    <header class="mb-auto">
+      <nav class="navbar navbar-expand-md navbar-dark float-md-end fixed-top" style="background-color: rgba(0,0,0,0.7);">
+        <div class="container opacity-100" id="navContainer">
+          <a class="navbar-brand text-light" style="font-size: 12px" href="index.html">
+            <img class="m-0 p-0" src="images/company_logo_light.png" alt="" style="height: 45px;">
+          </a>
+          <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarCollapse"
+                  aria-controls="#navbarCollapse"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation">
+            <span class="toggler-icon top-bar"></span>
+            <span class="toggler-icon middle-bar"></span>
+            <span class="toggler-icon bottom-bar"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav ms-auto" style="text-align: center">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">
+                  HOME
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="team.html">
+                  TEAM
+                </a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle"
+                   id="navbarDropdown"
+                   role="button"
+                   data-bs-toggle="dropdown"
+                   aria-expanded="false"
+                   href="#">
+                  SERVICE
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark rounded-3 gap-1 shadow"
+                    style="background-color: rgba(0,0,0,0.7); text-align: center"
+                    aria-labelledby="navbarDropdown">
+                  <li>
+                    <a href="MacRepair.html" class="dropdown-item rounded-2 py-4">
+                      MAC REPAIR
+                    </a>
+                  </li>
+                  <li>
+                    <a href="AccessoriesRepair.html" class="dropdown-item rounded-2 py-4">
+                      ACCESSORIES REPAIR
+                    </a>
+                  </li>
+                  <li>
+                    <a href="iPhoneRepair.html" class="dropdown-item rounded-2 py-4">
+                      IPHONE REPAIR
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">
+                  CONTACT
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="About.html">
+                  ABOUT US
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <header class="bg-light" style="height: 71px;"></header>
+
+
+      <h1>Meet Our Team</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="image-container h-100 w-100 m-0 my-3">
+            <img src="images/Frank.jpg" alt="Testimonial Image 1">
+            <h2>Frank</h2>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="image-container h-100 w-100 m-0 my-3">
+            <img src="images/Rie.jpg" alt="Testimonial Image 2">
+            <h2>Rie</h2>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="image-container h-100 w-100 m-0 my-3">
+            <img src="images/Pablo.jpg" alt="Testimonial Image 3">
+            <h2>Pablo</h2>
+          </div>
+        </div>
+      </div>
+
+      <form class="comment-form mb-5">
+        <h2>Tell Us Your Experience</h2>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="comment">Comment:</label>
+        <textarea id="comment" name="comment" rows="4" required></textarea>
+
+        <button type="submit">Submit</button>
+      </form>
+      <div id="submission-message" style="display:none;">
+        <p>Thank you for your submission!</p>
+      </div>
+
+    </div>
+
+   <!-- Footer -->
+    <footer class="d-flex flex-wrap justify-content-between mx-0 align-items-center px-5 py-5"
+              style="background-color: rgb(239,239,239)">
+          <div class="col-md-4 d-flex align-items-center my-2">
+              <span class="mb-md-0 text-body-secondary lh-5 mb-0" style="text-align: left">
+                  © 2023 CyberCore Technology, Inc. <br> All rights reserved.
+                  <br>
+                  <span class="lh-1" id="datetime"></span>
+              </span>
+          </div>
+
+          <div class="col-md-4 d-flex align-center justify-content-center my-2">
+              <img class="col-md-4 d-flex align-items-center object-fit-contain" src="images/company_logo.png" style="height: 45px" alt="">
+          </div>
+
+          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex my-2">
+              <li class="me-3" style="font-size: 20px"><a class="text-body-secondary" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+              <li class="me-3" style="font-size: 20px"><a class="text-body-secondary" href="#"><i class="fa-brands fa-twitter"></i></a></li>
+              <li class="me-3" style="font-size: 20px"><a class="text-body-secondary" href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
           </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-
-  <header class="bg-light" style="height: 71px;"></header>
-
-
-    <h1>Meet Our Team</h1>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="image-container h-100 w-100 m-0 my-3">
-          <img src="images/Frank.jpg" alt="Testimonial Image 1">
-          <h2>Frank</h2>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="image-container h-100 w-100 m-0 my-3">
-          <img src="images/Rie.jpg" alt="Testimonial Image 2">
-          <h2>Rie</h2>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="image-container h-100 w-100 m-0 my-3">
-          <img src="images/Pablo.jpg" alt="Testimonial Image 3">
-          <h2>Pablo</h2>
-        </div>
-      </div>
-    </div>
-
-    <form class="comment-form mb-5">
-      <h2>Tell Us Your Experience</h2>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
-
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="comment">Comment:</label>
-      <textarea id="comment" name="comment" rows="4" required></textarea>
-
-      <button type="submit">Submit</button>
-    </form>
-    <div id="submission-message" style="display:none;">
-      <p>Thank you for your submission!</p>
-    </div>
-
-    <script>
-      $(document).ready(function() {
-        $('.comment-form').on('submit', function(e) {
-          e.preventDefault(); // Prevents the default form submission
-
-          // Add your logic here if you need to handle the form data
-
-          // Hide the form and show the submission message
-          $(this).hide();
-          $('#submission-message').show();
-        });
-      });
-    </script>
-
+      </footer>
   </div>
 
- <!-- Footer -->
-  <footer class="d-flex flex-wrap justify-content-between mx-0 align-items-center px-5 py-5"
-            style="background-color: rgb(239,239,239)">
-        <div class="col-md-4 d-flex align-items-center my-2">
-            <span class="mb-md-0 text-body-secondary lh-5 mb-0" style="text-align: left">
-                © 2023 CyberCore Technology, Inc. <br> All rights reserved.
-                <br>
-                <span class="lh-1" id="datetime"></span>
-            </span>
-        </div>
-
-        <div class="col-md-4 d-flex align-center justify-content-center my-2">
-            <img class="col-md-4 d-flex align-items-center object-fit-contain" src="images/company_logo.png" style="height: 45px" alt="">
-        </div>
-
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex my-2">
-            <li class="me-3" style="font-size: 20px"><a class="text-body-secondary" href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            <li class="me-3" style="font-size: 20px"><a class="text-body-secondary" href="#"><i class="fa-brands fa-twitter"></i></a></li>
-            <li class="me-3" style="font-size: 20px"><a class="text-body-secondary" href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-        </ul>
-    </footer>
-</div>
-<script>
-  // JavaScript Automated Date 
-  function updateDateTime() {
-    let currentDateTime = new Date();
-    document.getElementById('datetime').innerHTML = currentDateTime.toLocaleString();
-  }
-
-  setInterval(updateDateTime, 1000);
-</script>
-
+<script src="index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
